# image_url_classifier

./: .gitignore  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  home_page.py  main.py
app/models/: machine_learning.py
app/static/: styles.css
app/templates/: classifications.html  home.html
tests/: ML_tests.py  test_ML.py
